<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            tools:context=".FastFoodSuaresActivity">

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/mainimage"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sharp_place_white_24dp"
                android:tint="@color/colorPrimary"
                android:layout_below="@id/txtTitle"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"/>

            <ImageView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_contact_phone_white_24dp"
                android:tint="@color/colorPrimary"
                android:layout_below="@id/location"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"/>

            <ImageView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_contact_mail_white_24dp"
                android:tint="@color/colorPrimary"
                android:layout_below="@id/contact"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainImage"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/desLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:layout_toRightOf="@id/location"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/des_location"/>

            <TextView
                android:id="@+id/numContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/desLocation"
                android:layout_toRightOf="@id/location"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:ems="8"
                android:text="@string/contact"/>

            <TextView
                android:id="@+id/emaAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/numContact"
                android:layout_toRightOf="@id/email"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/busDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDescription"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:ems="20"
                android:text="@string/business_description"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>